Name:                bytestring-builder
Version:             0.1.0.0
Synopsis:            Efficient construction of sequences of bytes.

Description:
    Data structures for the efficient construction of sequences of bytes.
    .
    Currently only one data structure is provided:
    .
      * Lazy bytestring 'Builder's represent sequences of bytes and support
        an /O(1)/ append operations. This makes them well-suited for
        incrementally constructing lazy 'ByteString's from pieces, e.g.,
        constructing a HTTP response.

License:             BSD3
License-file:        LICENSE
Category:            Data
Copyright:           (c) Jasper Van der Jeugt 2010,
                     (c) Simon Meier          2010-2012.

Author:              Simon Meier
Maintainer:          Simon Meier <iridcode@gmail.com>
Tested-With:         GHC==7.4.1, GHC==7.2.1, GHC==7.0.4
Build-Type:          Simple
Cabal-Version:       >= 1.8
extra-source-files:  README TODO

source-repository head
  type:     git
  location: git://github.com/meiersi/cereal.git

library
  build-depends:     base >= 3 && < 5, deepseq

  if impl(ghc >= 6.10)
    build-depends:   ghc-prim, base >= 4, bytestring == 0.9.*

  exposed-modules:   Data.ByteString.Lazy.Builder
                     Data.ByteString.Lazy.Builder.Extras
                     Data.ByteString.Lazy.Builder.ASCII
                     Data.ByteString.Lazy.Builder.Internal
                     Data.ByteString.Lazy.Builder.BasicEncoding
                     Data.ByteString.Lazy.Builder.BasicEncoding.Internal

  other-modules:     Data.ByteString.Lazy.Builder.BasicEncoding.Binary
                     Data.ByteString.Lazy.Builder.BasicEncoding.ASCII
                     Data.ByteString.Lazy.Builder.BasicEncoding.Internal.Floating
                     Data.ByteString.Lazy.Builder.BasicEncoding.Internal.UncheckedShifts
                     Data.ByteString.Lazy.Builder.BasicEncoding.Internal.Base16

  extensions:        CPP,
                     ForeignFunctionInterface,
                     BangPatterns

  if impl(ghc)
      extensions:   UnliftedFFITypes,
                    MagicHash,
                    UnboxedTuples,
                    DeriveDataTypeable
                    ScopedTypeVariables
                    Rank2Types

  ghc-options:      -Wall
                    -O2
                    -fmax-simplifier-iterations=10
                    -fdicts-cheap
  if impl(ghc >= 6.10)
    ghc-options:    -fspec-constr-count=6

  -- flags for the decimal integer serialization code
  if impl(ghc >= 6.11)
    cpp-options: -DINTEGER_GMP
    build-depends: integer-gmp >= 0.2 && < 0.5

  if impl(ghc >= 6.9) && impl(ghc < 6.11)
    cpp-options: -DINTEGER_GMP
    build-depends: integer >= 0.1 && < 0.2

  c-sources:         cbits/itoa.c
                     cbits/varint.c
  include-dirs:      include
  includes:          fpstring.h
  install-includes:  fpstring.h

  nhc98-options:     -K4M -K3M


test-suite test-builder
  type:             exitcode-stdio-1.0
  hs-source-dirs:   . tests tests/builder
  main-is:          TestSuite.hs

  build-depends:    base, ghc-prim, integer-gmp
                  , deepseq
                  , QuickCheck                 >= 2.4 && < 3
                  , HUnit                      == 1.2.*
                  , byteorder                  == 1.0.*
                  , dlist                      == 0.5.*
                  , directory                  >= 1.0 && < 2
                  , mtl                        == 2.0.*
                  , deepseq                    >= 1.2 && < 2


  ghc-options:      -Wall -fwarn-tabs

  extensions:       CPP, ForeignFunctionInterface
                    UnliftedFFITypes,
                    MagicHash,
                    UnboxedTuples,
                    DeriveDataTypeable
                    ScopedTypeVariables
                    Rank2Types
                    BangPatterns
                    NamedFieldPuns

  c-sources:        cbits/fpstring.c
                    cbits/itoa.c
                    cbits/varint.c
  include-dirs:     include
  includes:         fpstring.h
  install-includes: fpstring.h
  -- flags for the decimal integer serialization code
  if impl(ghc >= 6.11)
    cpp-options: -DINTEGER_GMP
    build-depends: integer-gmp >= 0.2 && < 0.5

  if impl(ghc >= 6.9) && impl(ghc < 6.11)
    cpp-options: -DINTEGER_GMP
    build-depends: integer >= 0.1 && < 0.2
